--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "firebase": "^12.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
